refactor: use fumadocs for documentation feature (#1677)

--- a/apps/web/content/docs/index.mdx
+++ b/apps/web/content/docs/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Documentation
+description: This is a short description of this docs page that is also used as a meta description for SEO.
 ---
 
 Welcome to the documentation of acme. Here you will find all the information you need to work with our software. 
