--- a/packages/i18n/translations/en.json
+++ b/packages/i18n/translations/en.json
@@ -217,6 +217,9 @@
 		},
 		"title": "Contact us"
 	},
+	"documentation": {
+		"title": "Documentation"
+	},
 	"faq": {
 		"description": "Do you have any questions? We have got you covered.",
 		"title": "Frequently asked questions"
