feat: add chat ui and api for chat

--- a/packages/i18n/translations/de.json
+++ b/packages/i18n/translations/de.json
@@ -73,7 +73,7 @@
 		"menu": {
 			"accountSettings": "Kontoeinstellungen",
 			"admin": "Administration",
-			"aiDemo": "AI-Demo",
+			"aiChatbot": "AI Chatbot",
 			"organizationSettings": "Organisationseinstellungen",
 			"start": "Start"
 		},
