--- a/packages/i18n/translations/en.json
+++ b/packages/i18n/translations/en.json
@@ -73,7 +73,7 @@
 		"menu": {
 			"accountSettings": "Account settings",
 			"admin": "Admin",
-			"aiDemo": "AI Demo",
+			"aiChatbot": "AI Chatbot",
 			"organizationSettings": "Organization settings",
 			"start": "Start"
 		},
