--- a/packages/i18n/translations/en.json
+++ b/packages/i18n/translations/en.json
@@ -440,65 +440,6 @@
 			"subtitle": "Welcome to the start page of this organization!"
 		}
 	},
-	"pricing": {
-		"choosePlan": "Choose plan",
-		"contactSales": "Contact sales",
-		"description": "Choose the plan that works best for you.",
-		"getStarted": "Get started",
-		"month": "{count, plural, one {month} other {{count} months}}",
-		"monthly": "Monthly",
-		"products": {
-			"basic": {
-				"description": "Perfect to small teams.",
-				"features": {
-					"anotherFeature": "Another amazing feature",
-					"limitedSupport": "Limited support"
-				},
-				"title": "Basic"
-			},
-			"enterprise": {
-				"description": "Custom plan tailored to your requirements",
-				"features": {
-					"enterpriseSupport": "Enterprise support",
-					"unlimitedProjects": "Unlimited projects"
-				},
-				"title": "Enterprise"
-			},
-			"free": {
-				"description": "Start for free",
-				"features": {
-					"anotherFeature": "Another amazing feature",
-					"limitedSupport": "Limited support"
-				},
-				"title": "Free"
-			},
-			"lifetime": {
-				"description": "Buy once. Use forever.",
-				"features": {
-					"extendSupport": "Extended support",
-					"noRecurringCosts": "No recurring costs"
-				},
-				"title": "Lifetime"
-			},
-			"pro": {
-				"description": "Best for teams",
-				"features": {
-					"anotherFeature": "Another amazing feature",
-					"fiveMembers": "Up to 5 members",
-					"fullSupport": "Full support"
-				},
-				"title": "Pro"
-			}
-		},
-		"purchase": "Purchase",
-		"recommended": "Recommended",
-		"subscribe": "Subscribe",
-		"title": "Pricing",
-		"trialPeriod": "{days} {days, plural, one {day} other {days}} free trial",
-		"year": "{count, plural, one {year} other {{count} years}}",
-		"yearly": "Yearly",
-		"perSeat": "seat"
-	},
 	"settings": {
 		"account": {
 			"avatar": {
@@ -793,7 +734,7 @@
 		"generateError": "Failed to generate description, please try again.",
 		"generateSuccess": "Description generated successfully",
 		"generateTips": "The description will be displayed in the output box after the generation is complete.",
-		"generateButton": "Generate description",
+		"generateButton": "Generate Video",
 		"imageNotUploaded": "Please upload an image first",
 		"loadImageError": "Failed to load image, please try again.",
 		"maxUsage": "You have reached the maximum number of credits",
@@ -883,5 +824,96 @@
 			"description": "Sign up now and start generating professional-quality videos in minutes.",
 			"button": "Get Started"
 		}
+	},
+	"components": {
+		"feedbackTips": {
+			"title": "Whether the generated content meets your needs?",
+			"yes": "Yes",
+			"no": "No",
+			"yesFeedback": "Thank you for your feedback! We are glad you are satisfied with the content.",
+			"noFeedback": "Thank you for your feedback! We will try to improve the content."
+		},
+		"localeSwitch": {
+			"tips": "Would you like to switch to ",
+			"switch": "YES"
+		},
+		"loginPopup": {
+			"title": "Login",
+			"subtitle": "Sign in to your account to continue"
+		},
+		"userMenu": {
+			"accountSettings": "Account settings",
+			"billing": "Billing",
+			"colorMode": "Color mode",
+			"documentation": "Documentation",
+			"home": "Home",
+			"logout": "Logout"
+		}
+	},
+	"pricing": {
+		"subtitle": "Purchase credits as needed",
+		"choosePlan": "Choose plan",
+		"contactSales": "Contact sales",
+		"getStarted": "Get started",
+		"month": "{count, plural, one {month} other {{count} months}}",
+		"monthly": "Monthly",
+		"products": {
+			"trial": {
+				"description": "Best for testing",
+				"features": {
+					"quota": "30 credits",
+					"maxVideoNumber": "Up to 3 videos",
+					"maxImageNumber": "Up to 30 images(coming soon)",
+					"ImageToVideoSupport": "Image to Video Support",
+					"aiVideoEnhancement": "AI Video Enhancement",
+					"videoDownload": "Video Download",
+					"videoShare": "Video Share",
+					"watermark": "No-watermark outputs",
+					"copyProtection": "Copy Protection",
+					"prioritySupport": "Priority Support"
+				},
+				"title": "Trial"
+			},
+			"basic": {
+				"description": "Best for personal",
+				"features": {
+					"quota": "100 credits",
+					"maxVideoNumber": "Up to 10 videos",
+					"maxImageNumber": "Up to 100 images(coming soon)",
+					"ImageToVideoSupport": "Image to Video Support",
+					"aiVideoEnhancement": "AI Video Enhancement",
+					"videoDownload": "Video Download",
+					"videoShare": "Video Share",
+					"watermark": "No-watermark outputs",
+					"copyProtection": "Copy Protection",
+					"prioritySupport": "Priority Support"
+				},
+				"title": "Basic"
+			},
+			"pro": {
+				"description": "Best for personal",
+				"features": {
+					"quota": "200 credits",
+					"maxVideoNumber": "Up to 20 videos",
+					"maxImageNumber": "Up to 200 images(coming soon)",
+					"ImageToVideoSupport": "Image to Video Support",
+					"aiVideoEnhancement": "AI Video Enhancement",
+					"videoDownload": "Video Download",
+					"videoShare": "Video Share",
+					"watermark": "No-watermark outputs",
+					"copyProtection": "Copy Protection",
+					"prioritySupport": "Priority Support"
+				},
+				"title": "Pro"
+			}
+		},
+		"purchase": "Purchase",
+		"recommended": "Recommended",
+		"subscribe": "Subscribe",
+		"title": "Pricing",
+		"trialPeriod": "{days} {days, plural, one {day} other {days}} free trial",
+		"year": "{count, plural, one {year} other {{count} years}}",
+		"yearly": "Yearly",
+		"perSeat": "seat"
 	}
 }
